tests/errors/err_ref_return.mix
// ERROR: cannot return a ref type
bad(x: ref int) -> ref int
    x
